footer align fixed #2

--- a/src/css/variablesClassics.css
+++ b/src/css/variablesClassics.css
@@ -79,7 +79,7 @@ html {
   --footer-engagement-logo-margin: 0;
   --footer-engagement-logo-max-height-mobile: 40px;
   --footer-engagement-logo-max-height: 40px;
-  --footer-engagement-logo-padding: 14px 0 0;
+  --footer-engagement-logo-padding: 24px 0 0;
   --footer-engagement-logo-text-a-color-hover: var(--footer-engagement-logo-text-a-color);
   --footer-engagement-logo-text-a-color: #009fe3;
   --footer-engagement-logo-text-color: #009fe3;
